refactor: update naming convention from user to account
