# server/auth-service/src/services/tokenService.ts
@@ -1,33 +1,54 @@
 import jwt from "jsonwebtoken";
 
-import type {DeviceTokenPayload, StandardTokenPayload} from "../models/token.js";
+import type {
+  DeviceTokenPayload,
+  StandardTokenPayload,
+} from "../models/token.js";
+import { getTokenSecret } from "../config/config.js";
 
-const getTokenSecret = () => {
-    const secret = process.env.JWT_SECRET;
-    if (!secret) {
-        throw new Error("JWT_SECRET environment variable is not set");
-    }
-    return secret;
-}
+export const generateStandardToken = (payload: StandardTokenPayload) => {
+  const secret = getTokenSecret();
 
-export const generateStandardToken = (user: StandardTokenPayload)=> {
-    return jwt.sign({
-        userId: user.userId,
-        username: user.username
-    }, getTokenSecret(), { expiresIn: "3h" })
-}
+  if (!secret) {
+    throw new Error("secret configuration error");
+  }
+
+  return jwt.sign(
+    {
+      accountId: payload.accountId,
+      accountName: payload.accountName,
+    },
+    secret,
+    { expiresIn: "3h" },
+  );
+};
 
 export const generateDeviceToken = (payload: DeviceTokenPayload) => {
-    return jwt.sign({
-        domainName: payload.domainName,
-        buildingId: payload.buildingId,
-        deviceName: payload.deviceName,
-        deviceType: payload.deviceType,
-        isBuildingSpecific: payload.isBuildingSpecific
-    }, getTokenSecret(), { expiresIn: "1825d" })
-}
+  const secret = getTokenSecret();
+
+  if (!secret) {
+    throw new Error("secret configuration error");
+  }
+
+  return jwt.sign(
+    {
+      domainName: payload.domainName,
+      buildingId: payload.buildingId,
+      deviceName: payload.deviceName,
+      deviceType: payload.deviceType,
+      isBuildingSpecific: payload.isBuildingSpecific,
+    },
+    secret,
+    { expiresIn: "1825d" },
+  );
+};
 
 export const verifyToken = (token: string) => {
-    return jwt.verify(token, getTokenSecret())
-}
+  const secret = getTokenSecret();
 
+  if (!secret) {
+    throw new Error("secret configuration error");
+  }
+
+  return jwt.verify(token, secret);
+};
